--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,12 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.18)
 
-project(CeresFile)
+project(CeresFile VERSION 1.0.0 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS_ASAN "-fsanitize=address -fno-omit-frame-pointer -g -Wall")
+set(CMAKE_EXE_LINKER_FLAGS_ASAN  "-fsanitize=address -g -Wall")
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    add_definitions(-DCERESFILE_DEBUG)
-endif()
+set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
+set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
 
 if(UNIX)
     add_definitions(-DCERESFILE_PLATFORM_LINUX)
@@ -17,30 +14,22 @@ elseif(WIN32)
     add_definitions(-DCERESFILE_PLATFORM_WINDOWS)
 endif()
 
-file(GLOB_RECURSE CERESFILE_HEADER_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/src/*.h"
-							   "${CMAKE_CURRENT_LIST_DIR}/src/*.hpp")
 file(GLOB_RECURSE CERESFILE_SOURCE_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
+add_library(CeresFile STATIC ${CERESFILE_SOURCE_FILES})
+set_target_properties(CeresFile PROPERTIES CXX_STANDARD 20)
 
-set(CeresFile_INDLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/include")
-file(GLOB_RECURSE CERESFILE_INCLUDE_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/include/*.h")
+target_include_directories(CeresFile
+    PUBLIC 
+        $<INSTALL_INTERFACE:include>    
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
+)
 
-
-add_library(CeresFile STATIC ${CERESFILE_SOURCE_FILES} ${CERESFILE_HEADER_FILES})
-target_include_directories(CeresFile INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include")
 add_library(CeresFile::CeresFile ALIAS CeresFile)
 
-if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
-  set(CERESFILE_BUILD_TESTS_DEFAULT ON)
-else()
-  message(STATUS "CeresFile running as subproject!")
-  set(CERESFILE_BUILD_TESTS_DEFAULT OFF)
-endif()
-option(CERESFILE_BUILD_TESTS "Build CeresFile Testing Project" ${CERESFILE_BUILD_TESTS_DEFAULT})
+option(CERESFILE_BUILD_TESTS "Build CeresFile Tests" ON)
 if(CERESFILE_BUILD_TESTS)
-  message(STATUS "Building CeresFile tests...")
-  add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/thirdparty/catch")
   add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/test/")
-else()
-  message(STATUS "CeresFile-Tests disabled..")
 endif()
 
