--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ project(CeresFile VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_FLAGS_ASAN "-fsanitize=address -fno-omit-frame-pointer -g -Wall")
 set(CMAKE_EXE_LINKER_FLAGS_ASAN  "-fsanitize=address -g -Wall")
 
+if(MSVC)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /EHsc")
+else()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
+endif()
+
 set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
 
@@ -17,6 +23,9 @@ endif()
 file(GLOB_RECURSE CERESFILE_SOURCE_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
 add_library(CeresFile STATIC ${CERESFILE_SOURCE_FILES})
 set_target_properties(CeresFile PROPERTIES CXX_STANDARD 20)
+if(UNIX)
+    target_link_libraries(CeresFile pthread)
+endif()
 
 target_include_directories(CeresFile
     PUBLIC 
