--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,14 @@ cmake_minimum_required(VERSION 3.18)
 
 project(CeresFile VERSION 1.0.0 LANGUAGES CXX)
 
+option(CERESFILE_BUILD_OWN_PACKAGES "Build all dependencies from scratch." OFF)
+if(NOT CERESFILE_BUILD_OWN_PACKAGES)
+  set(CPM_USE_LOCAL_PACKAGES ON)
+else()
+  message(STATUS "Building CeresFile dependencies from scratch...")
+  set(CPM_USE_LOCAL_PACKAGES OFF)
+endif()
+
 set(CMAKE_CXX_FLAGS_ASAN "-fsanitize=address -fno-omit-frame-pointer -g -Wall")
 set(CMAKE_EXE_LINKER_FLAGS_ASAN  "-fsanitize=address -g -Wall")
 
