Switched to new Utility lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.18)
 
 project(CeresFile VERSION 1.0.0 LANGUAGES CXX)
 
+include(${CMAKE_CURRENT_LIST_DIR}/cmake/CPM.cmake)
+
 option(CERESFILE_BUILD_OWN_PACKAGES "Build all dependencies from scratch." OFF)
 if(NOT CERESFILE_BUILD_OWN_PACKAGES)
   set(CPM_USE_LOCAL_PACKAGES ON)
@@ -28,9 +30,17 @@ elseif(WIN32)
     add_definitions(-DCERESFILE_PLATFORM_WINDOWS)
 endif()
 
+
+CPMAddPackage(NAME Utilities 
+              GIT_TAG v1.0.0-alpha5
+              GITHUB_REPOSITORY Javask/Utilities
+              OPTIONS
+                "UTILITIES_BUILD_TESTS OFF")
+
 file(GLOB_RECURSE CERESFILE_SOURCE_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
 add_library(CeresFile STATIC ${CERESFILE_SOURCE_FILES})
 set_target_properties(CeresFile PROPERTIES CXX_STANDARD 20 COMPILE_OPTIONS "${CERES_CXX_FLAGS}")
+target_link_libraries(CeresFile Utilities::Utilities)
 if(UNIX)
     target_link_libraries(CeresFile pthread)
 endif()
